fixed portfolio pages with blockquote and list alignment in top

--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -77,7 +77,8 @@ nav{
 
 .topInfo .head{
     flex-direction: column;
-    margin-right: 10vw;
+    margin-right: 5vw;
+    flex: 1
 }
 
 .topInfo .main-head{
@@ -90,9 +91,10 @@ nav{
 
 .topInfo .lists{
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
     align-content: flex-end;
-    flex: 1;
+    flex: 3;
     width: 100%;
 }
 
@@ -131,41 +133,39 @@ nav{
     
 }
 
-blockquote{
+
+.quote{
     font-size: 2em !important;
-    padding-top: 25px !important;
     flex: 1;
-    color: #575757;
+    color: #aaaaaa;
     font-family: 'Nunito Sans', sans-serif;
     position: relative;
     border-left: none !important;
-    box-shadow: 3px 3px 6px #aaaaaa;
     margin-right: 35px !important;
     margin-left: 25px !important;
     max-width: 350px;
     width: 350px;
-    top: -200px;
     background-color: white;
     z-index: 5;
     min-width: 300px;
 }
 
-blockquote:before{
+.quote:before{
     content: '"';
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 900;
-    opacity: 0.5;
-    top: -65px;
-    left: -10px;
-    transform: rotate(-15deg);
-    color: #b4b4b4;
+    top: -70px;
+    left: -25px;
+    transform: rotate(-25deg);
+    color: #d1d1d1;
     position: absolute;
-    font-size: 5em;
+    font-size: 4em;
     z-index: -5;
     margin-top: auto;
 }
 
-.postHeroImage p{
+
+.postHeroImage span p{
     font-family: 'Nunito Sans', sans-serif;
     max-width: 600px;
     font-size: 1.25em;
@@ -321,22 +321,23 @@ blockquote:before{
 
     .postHeroImage{
         display: block;
+        margin-top: 4vh;
     }
 
-    blockquote{
+    .quote{
         max-width: none;
         width: 90%;
         position: relative;
         font-size: 1.5em !important;
         margin-left: 5% !important;
         top: 0;
-        margin-top: -120px !important;
+        /* margin-top: -120px !important; */
         margin-bottom: 30px !important;
     }
 
-    blockquote::before{
-        top: -40px;
-        left: 5px;
+    .quote::before{
+        top: -55px;
+        left: -20px;
     }
     
 
@@ -383,16 +384,16 @@ blockquote:before{
         margin-bottom: 0;
     }
 
-    blockquote{
+    .quote{
         font-size: 1.25em !important;
         min-width: none;
         width: 80vw;
         min-width: auto;
     }
 
-    blockquote::before{
-        top: -35px;
-        left: 0px;
+    .quote::before{
+        top: -45px;
+        left: -15px;
     }
 
     .postHeroImage span p{
